--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,9 @@
+/* CUSTOM-PROPERTY */
+:root{
+  --font-color: #333;
+  --primary-color: #EA625C;
+  --primary-font-color: #fff;
+}
 /* FONTS */
 @font-face {
   font-family: 'Roboto';
@@ -15,11 +21,12 @@
        url('../fonts/roboto-v29-latin-700.woff') format('woff');
   font-display: swap;
 }
-/* GLOBAL */
+/* GLOBAL-STYLES */
 html{
   box-sizing: border-box;
   height: 100%;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 *,*::after,*::before{
   box-sizing: border-box;
@@ -35,7 +42,7 @@ body{
   font-style: normal;
   font-weight: 400;
   line-height: 24px;
-  background-color: #fff;
+  background-color: var(--primary-font-color);
   color: #777;
 }
 img{
@@ -50,16 +57,25 @@ img{
 a{
   text-decoration: none;
 }
+.visually-hidden {
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
 .button{
   display: inline-block;
-  padding: 12px 39px;
   min-width: 260px;
-  text-align: center;
+  padding: 12px 39px;
   font-size: 18px;
   font-weight: bold;
   line-height: 150%;
-  color: #fff;
-  background-color: #EA625C;
+  color: var(--primary-font-color);
+  background-color:  var(--primary-color);
+  text-align: center;
   text-transform: uppercase;
   transition: background-color 0.4s ease, opacity 0.4s ease;
 }
@@ -72,8 +88,8 @@ a{
 
 /* CONTAINER  */
 .container{
-  width: 100%;
   max-width: 1100px;
+  width: 100%;
   padding-right: 50px;
   padding-left: 50px;
   margin-right: auto;
@@ -87,22 +103,30 @@ a{
 
 /* HEADER  */
 .site-header {
-  margin-top: 30px;
-  margin-bottom: 80px;
+  padding: 30px 0;
+  margin-bottom: 50px;
 }
 .header-container {
   display: flex;
   align-items: center;
 }
 .site-logo-link {
+  flex-shrink: 0;
   display: flex;
   margin-right: auto;
+  transition: opacity 0.4s ease;
+}
+.site-logo-link:hover{
+  opacity: 0.8;
+}
+.site-logo-link:active{
+  opacity: 0.6;
 }
 .site-logo-img {
   width: 35px;
   height: 42px;
 }
-.site-nav {
+.site-nav-list {
   display: flex;
   padding: 0;
   margin: 0;
@@ -117,12 +141,12 @@ a{
   padding-bottom: 3px;
   font-size: 15px;
   line-height: 150%;
-  color: #333;
-  border-bottom: 3px solid #fff;
+  border-bottom: 3px solid var(--primary-font-color);
+  color: var(--font-color);
   transition: border-bottom 0.4s ease, opacity 0.4s ease ;
 }
 .site-nav-item-link:hover{
-  border-bottom:3px solid #333;
+  border-bottom:3px solid var(--font-color);
 }
 .site-nav-item-link:active{
   opacity: 0.6;
@@ -132,21 +156,33 @@ a{
   padding-bottom: 5px;
   padding-top: 5px;
   font-size: 15px;
-  font-style: normal;
   line-height: 150%;
   border: 0;
-  border-bottom: 1px solid #333;
+  border-bottom: 1px solid var(--font-color);
   color: #666;
+}
+.aid-department:-webkit-autofill,
+.aid-department:-webkit-autofill:hover,
+.aid-department:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  -webkit-text-fill-color: #000;
+  background-color: var(--primary-font-color);
+  transition: background-color 5000s ease-in-out 0s;
 }
 
 /* INTRO */
 .intro {
   height: 565px;
+  border-bottom: 2px solid #ddd;
   background-image: url("../imgs/intro-bg.jpg");
   background-repeat: no-repeat;
   background-size: contain;
   background-position: left calc(50% + 550px) bottom ;
-  border-bottom: 2px solid #ddd;
 }
 .intro-container{
   display: flex;
@@ -196,7 +232,7 @@ a{
   margin: 0 0 20px 0;
   font-size: 15px;
   line-height: 160%;
-  color: #333333;
+  color: var(--font-color);
 }
 .dots-devider {
   display: flex;
@@ -215,7 +251,7 @@ a{
   align-items: center;
   font-weight: bold;
   line-height: 160%;
-  color: #EA625C;
+  color:  var(--primary-color);
   text-transform: uppercase;
 }
 .features-button::before{
@@ -223,7 +259,7 @@ a{
   width: 40px;
   height: 3px;
   margin-right: 10px;
-  background-color: #EA625C;
+  background-color:  var(--primary-color);
   transition: width 0.4s ease, opacity 0.4s ease;
 }
 .features-button:hover::before{
@@ -242,7 +278,6 @@ a{
   display: flex;
   align-items: center;
   justify-content: space-between;
-
 }
 
 /* TAKE CONTROL  */
@@ -251,11 +286,11 @@ a{
   justify-content: center;
 }
 .take-control *{
-  color: #fff;
+  color: var(--primary-font-color);
 }
 .take-control-wrapper{
-  width: 100%;
   max-width: 1250px;
+  width: 100%;
   height: 830px;
   background-image: url("../imgs/runners.jpg");
   background-repeat: no-repeat;
@@ -269,10 +304,11 @@ a{
   justify-content: flex-end;
   height: 100%;
 }
-.take-control .site-content-text{
-  border-color: #fff;
+.take-control-content-text{
+  border-color: var(--primary-font-color);
 }
 
+/* MEDIA */
 @media
 only screen and (-webkit-min-device-pixel-ratio: 2),
 only screen and (   min--moz-device-pixel-ratio: 2),
