--- a/css/styles.css
+++ b/css/styles.css
@@ -253,6 +253,7 @@ select:-webkit-autofill:focus {
   line-height: 160%;
   color:  var(--primary-color);
   text-transform: uppercase;
+  transition: opacity 0.4s ease;
 }
 .features-button::before{
   content: "";
