--- a/css/styles.css
+++ b/css/styles.css
@@ -163,13 +163,7 @@ a{
 }
 .aid-department:-webkit-autofill,
 .aid-department:-webkit-autofill:hover,
-.aid-department:-webkit-autofill:focus,
-textarea:-webkit-autofill,
-textarea:-webkit-autofill:hover,
-textarea:-webkit-autofill:focus,
-select:-webkit-autofill,
-select:-webkit-autofill:hover,
-select:-webkit-autofill:focus {
+.aid-department:-webkit-autofill:focus{
   -webkit-text-fill-color: #000;
   background-color: var(--primary-font-color);
   transition: background-color 5000s ease-in-out 0s;
