--- a/css/styles.css
+++ b/css/styles.css
@@ -110,6 +110,28 @@ a{
   display: flex;
   align-items: center;
 }
+.site-header__sitenav{
+  margin-left: auto;
+}
+.site-header__input {
+  width: 153px;
+  padding-bottom: 5px;
+  padding-top: 5px;
+  font-size: 15px;
+  line-height: 150%;
+  border: 0;
+  border-bottom: 1px solid var(--font-color);
+  color: #666;
+}
+.site-header__input:-webkit-autofill,
+.site-header__input:-webkit-autofill:hover,
+.site-header__input:-webkit-autofill:focus{
+  -webkit-text-fill-color: #000;
+  background-color: var(--primary-font-color);
+  transition: background-color 5000s ease-in-out 0s;
+}
+
+/* LOGO */
 .logo {
   flex-shrink: 0;
   display: flex;
@@ -126,9 +148,8 @@ a{
   width: 35px;
   height: 42px;
 }
-.site-header__sitenav{
-  margin-left: auto;
-}
+
+/* SITENAV */
 .sitenav__list {
   display: flex;
   padding: 0;
@@ -154,23 +175,7 @@ a{
 .sitenav__link:active{
   opacity: 0.6;
 }
-.site-header__input {
-  width: 153px;
-  padding-bottom: 5px;
-  padding-top: 5px;
-  font-size: 15px;
-  line-height: 150%;
-  border: 0;
-  border-bottom: 1px solid var(--font-color);
-  color: #666;
-}
-.site-header__input:-webkit-autofill,
-.site-header__input:-webkit-autofill:hover,
-.site-header__input:-webkit-autofill:focus{
-  -webkit-text-fill-color: #000;
-  background-color: var(--primary-font-color);
-  transition: background-color 5000s ease-in-out 0s;
-}
+
 
 /* INTRO */
 .intro {
@@ -181,15 +186,16 @@ a{
   background-size: contain;
   background-position: left calc(50% + 550px) bottom ;
 }
-.intro-container{
+.intro__container{
   display: flex;
   align-items: center;
   height: 100%;
 }
 .site-content {
-  width: 490px;
+  max-width: 490px;
+  width: 100%;
 }
-.site-content-heading {
+.site-content__heading {
   margin-top: 0;
   margin-bottom: 30px;
   font-weight: bold;
@@ -197,7 +203,7 @@ a{
   line-height: 120%;
   color: #000;
 }
-.site-content-text {
+.site-content__text {
   margin: 0 0 30px 0;
   padding-left: 37px;
   border-left: 3px solid #888;
